fix scrollbar auto height

--- a/src/components/scrollbar/style.scss
+++ b/src/components/scrollbar/style.scss
@@ -5,10 +5,16 @@
 
   position: relative;
   width: 100%;
-  height: 100%;
+  height: auto;
+  min-height: 100%;
+  max-height: 100%;
   overflow: hidden;
 
   &__container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 9;
     overflow: scroll;
 
     &--x-hidden {
@@ -18,6 +24,7 @@
 
   &__vertical-scroll {
     position: absolute;
+    z-index: 10;
     width: $st-scrollbar-caret-size;
     cursor: pointer;
     background: $st-scrollbar-caret-background;
@@ -34,6 +41,7 @@
 
   &__horizontal-scroll {
     position: absolute;
+    z-index: 10;
     height: $st-scrollbar-caret-size;
     cursor: pointer;
     background: $st-scrollbar-caret-background;
@@ -53,6 +61,7 @@
     top: $st-scrollbar-base-margin;
     right: $st-scrollbar-caret-size * -1;
     bottom: $st-scrollbar-base-margin;
+    z-index: 10;
     width: $st-scrollbar-caret-size;
     opacity: $st-scrollbar-base-opacity;
     transition: $st-scrollbar-transition;
@@ -67,6 +76,7 @@
     right: $st-scrollbar-base-margin;
     bottom: $st-scrollbar-caret-size * -1;
     left: $st-scrollbar-base-margin;
+    z-index: 10;
     height: $st-scrollbar-caret-size;
     opacity: $st-scrollbar-base-opacity;
     transition: $st-scrollbar-transition;
